updated .ai files

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@
 		<div class="cta">
 		
 			<div class="logo">
-				<img src="{% static "images/sephyr_logo_dark-text_450x450.png" %}">
+				<h1> Sephyr </h1>
 			</div>
 			
 			
