updated langing page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
 	<!-- CALL TO ACTION CONTAINER -->
 	
 	<div id="cta-container">
-	
+		<div id="cta-container-overlay"></div>
 		<div class="cta">
 		
 			<div class="logo">
