updated langing page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,11 +29,10 @@
 	<!-- CALL TO ACTION CONTAINER -->
 	
 	<div id="cta-container">
-		<div id="cta-container-overlay"></div>
 		<div class="cta">
 		
 			<div class="logo">
-				<h1> Sephyr </h1>
+				<h1 style="font-size:72px;"> Sephyr | Online Beauty App </h1>
 			</div>
 			
 			
