--- a/static/css/main.css
+++ b/static/css/main.css
@@ -119,6 +119,7 @@ strike {
 	 background-attachment: fixed;
 	 background-color: #3e3d4e;
 	 color: white;
+	 box-shadow: inset 0 0 0 1000px rgba(63,61,79,.3);
 } 
 
 /*creates a dark opaque layer in the back*/
@@ -129,7 +130,8 @@ strike {
 .cta {
 	max-width: 960px;
 	margin: 0 auto;
-	padding-bottom: 32.5%;
+	padding-top: 13%;
+	padding-bottom: 21%;
 }
 
 
