--- a/static/css/main.css
+++ b/static/css/main.css
@@ -349,8 +349,7 @@ strike {
 	padding: 25px;
 	padding-bottom: 35px;	
 	max-width: 450px;
-	display: none;
-	margin: 0 10px;
+	margin: 0 auto;
 	}
 
 .size16 {
