--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
 		<div class="cta">
 
 			<div class="logo">
-				<h1> Sephyr </h1>
+				<h1 style="font-size:72px;"> Sephyr | Online Beauty App </h1>
 			</div>
 			
 			
