--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	
-	<title>Sephyr: Build your freelance business</title>
+	<title>Sephyr: Your business, your way</title>
 
 	<link href="/favicon.ico" rel="icon" type="image/x-icon">
 
