--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	
-	<title>Sephyr: Your business, your way</title>
+	<title>Sephyr: Beauty and Wellness Service</title>
 
 	<link href="/favicon.ico" rel="icon" type="image/x-icon">
 
@@ -33,7 +33,7 @@
 		<div class="cta">
 
 			<div class="logo">
-				<h1 style="font-size:72px;"> Sephyr | Online Beauty App </h1>
+				<h1 style="font-size:72px;"> Sephyr | Your Business, Your Way </h1>
 			</div>
 			
 			
