updated landing page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,11 +32,8 @@
 		<div class="cta">
 
 			<div class="logo">
-<<<<<<< HEAD
-				<h1 style="font-size:72px;"> Sephyr | Online Beauty App </h1>
-=======
+
 				<h1 style="font-size:72px;"> Sephyr | Your Business, Your Way </h1>
->>>>>>> c706be378761b26f47c7ea192aa022d4b85710d7
 			</div>
 			
 			
@@ -120,6 +117,8 @@
 		</div>
 		
 	</div>
+
+	<!-- THIRD FEATURE BENEFIT -->
 
 	<div id="feature-c-container">
 		
