--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,9 +12,13 @@
 	<link href= "{% static "css/main.css" %}" media="all" rel="stylesheet" type="text/css">
 
 	<link charset="utf-8" href="{% static "css/stylesheet.css" %}" rel="stylesheet" type="text/css">
-
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	
+	<!-- Bootstrap -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+
+	<!-- jQuery -->
+	<script type="text/javascript" src="{% static "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" %}"></script>
+
 	<script type="text/javascript" src="{% static "js/jquery.leanModal.min.js" %}"></script>
 	
 	<script type="text/javascript">
@@ -68,7 +72,7 @@
 
 	</div>
 
-	<!-- FIRST FEATURE BENEFIT -->
+	<!-- [Looking for clients] FIRST FEATURE BENEFIT -->
 
 	<div id="feature-a-container">
 
@@ -94,7 +98,7 @@
 	</div>
 
 
-	<!-- SECOND FEATURE BENEFIT -->
+	<!-- [Looking for clients] SECOND FEATURE BENEFIT -->
 
 	<div id="feature-b-container">
 		
@@ -118,7 +122,7 @@
 		
 	</div>
 
-	<!-- THIRD FEATURE BENEFIT -->
+	<!-- [Looking for clients] THIRD FEATURE BENEFIT -->
 
 	<div id="feature-c-container">
 		
@@ -142,6 +146,9 @@
 		</div>
 		
 	</div>
+
+
+	<!-- [Looking for beauty artists] FEATURE BENEFITS -->
 
 	<!-- FOOTER CONTAINER -->
 
