fixed two buttons on landing page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,6 +28,10 @@
 	</script>    
 </head>
 
+
+
+
+
 <body>
 
 	<!-- CALL TO ACTION CONTAINER -->
@@ -112,9 +116,11 @@
 
 			<div class="feature-b-copy">
 
-				<h2>Create a profile</h2>
+				<h2>Create a profile and network with other professionals in your area</h2>
 
-				<p>Allow customers to connect with you and your work. List a variety of services you provide. Upload pictures on your instagram profile, which will then sync with our app. </p>
+				<p>Allow customers to connect with you and your work. List a variety of services you provide. Upload pictures on your social media profiles and line it with your sephyr account.</p>
+
+				<p style="padding-top: 5px;">Connect with other professionals in your area. </p>
 
 			</div>
 
@@ -132,16 +138,17 @@
 
 				<h2>Easy to use platform</h2>
 
-				<p>Quick and easy to learn platform will allow you integrate this software in your business, allowing you to focus on your work.</p>
+				<p>Quick and easy to learn platform will allow you to integrate this software in your business</p>
+
+				<p style="padding-top: 5px;"> Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
 
 			</div>
 			
 			<div class="feature-c-image">
 
-				<img src="{% static "images/feature-image.png" %}" />
+				<img src="{% static "images/Icons/platform_icon.svg" %}" />
 
 			</div>
-
 
 		</div>
 		
