--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+ 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- add other meta contents after this line -->
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-	
-	<title>Sephyr: Beauty and Wellness Service</title>
 
 	<link href="/favicon.ico" rel="icon" type="image/x-icon">
 
@@ -12,9 +24,6 @@
 	<link href= "{% static "css/main.css" %}" media="all" rel="stylesheet" type="text/css">
 
 	<link charset="utf-8" href="{% static "css/stylesheet.css" %}" rel="stylesheet" type="text/css">
-	
-	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- jQuery -->
 	<script type="text/javascript" src="{% static "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" %}"></script>
@@ -25,7 +34,9 @@
 		$(function() {
 			$('a[rel*=leanModal]').leanModal({ top : 200, closeButton: ".modal_close" });		
 		});
-	</script>    
+	</script>   
+
+	<title>Sephyr: Beauty and Wellness Service</title> 
 </head>
 
 
@@ -80,6 +91,10 @@
 
 	<div id="feature-a-container">
 
+		<h1 class="page-header" style="border:none; margin:20px 0 40px;">
+	                    Looking For Beauty Artists
+	                </h1>
+
 		<div class="feature-a">
 
 			<div class="feature-a-copy">
@@ -95,7 +110,7 @@
 		
 		<div class="feature-a-image">
 
-			<img src="{% static "images/Icons/calendar.png" %}" />
+			<img class="center-block" src="{% static "images/Icons/calendar.png" %}" />
 
 		</div>
 
@@ -110,7 +125,7 @@
 			
 			<div class="feature-b-image">
 
-				<img src="{% static "images/feature-image.png" %}" />
+				<img class="center-block" src="{% static "images/Icons/profile_icon.png" %}" />
 
 			</div>
 
@@ -146,7 +161,7 @@
 			
 			<div class="feature-c-image">
 
-				<img src="{% static "images/Icons/platform_icon.svg" %}" />
+				<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
 
 			</div>
 
@@ -157,6 +172,54 @@
 
 	<!-- [Looking for beauty artists] FEATURE BENEFITS -->
 
+	<div class="continer-fluid">
+		<div class="row">
+			<div class="col-lg-12">
+	                <h1 class="page-header" style="border:none; margin:20px 0 40px;">
+	                    Looking For Beauty Artists
+	                </h1>
+	            </div>
+			<div class="col-md-3">
+	                <div class="panel panel-default">
+	                    <div class="panel-heading" style="background:none; border:none;">
+	                        <img class="img-responsive center-block" src="{% static "images/Icons/housecall_icon.png" %}" style="width:180px; height:180px"/>
+	                    </div>
+	                    <div class="panel-body">
+	                        <p>Have the experts come to you</p>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="col-md-3">
+	                <div class="panel panel-default">
+	                    <div class="panel-heading" style="background:none; border:none;">
+	                        <img class="img-responsive center-block" src="{% static "images/Icons/review_icon.png" %}" style="width:180px; height:180px"/>
+	                    </div>
+	                    <div class="panel-body">
+	                        <p>Rate | Review | Follow your favorite artists and create a community</p>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="col-md-3">
+	                <div class="panel panel-default">
+	                    <div class="panel-heading" style="background:none; border:none;">
+	                        <img class="img-responsive center-block" src="{% static "images/Icons/find_icon.png" %}" />
+	                    </div>
+	                    <div class="panel-body">
+	                        <p>Find Experts Near You</p>
+	                    </div>
+	                </div>
+	            </div>
+	            <div class="col-md-3">
+	                <div class="panel panel-default">
+	                    <div class="panel-heading" style="background:none; border:none;">
+	                        <img class="img-responsive center-block" src="{% static "images/Icons/appointment_icon.png" %}"/>
+	                    </div>
+	                    <div class="panel-body">
+	                        <p>Schedule Appointments at the tap of a button</p>
+	                    </div>
+	                </div>
+	            </div>
+	    </div>
 	<!-- FOOTER CONTAINER -->
 
 	<div id="footer-container">
