removed js file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,14 +26,13 @@
 	<link charset="utf-8" href="{% static "css/stylesheet.css" %}" rel="stylesheet" type="text/css">
 
 	<!-- jQuery -->
+	<script type="text/javascript" src="jquery-1.8.3.js"></script>
 	<script type="text/javascript" src="{% static "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" %}"></script>
 
 	<script type="text/javascript" src="{% static "js/jquery.leanModal.min.js" %}"></script>
 	
 	<script type="text/javascript">
-		$(function() {
-			$('a[rel*=leanModal]').leanModal({ top : 200, closeButton: ".modal_close" });		
-		});
+		
 	</script>   
 
 	<title>Sephyr: Beauty and Wellness Service</title> 
