--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,130 +42,65 @@
 
 <body>
 
-	<!-- CALL TO ACTION CONTAINER -->
-
 	<div id="cta-container">
 		<div class="cta">
-
 			<div class="logo">
-
 				<h1 style="font-size:72px;"> Sephyr | Your Business, Your Way </h1>
 			</div>
-			
-			
 			<div class="copy">
-				
-				<h1>
-					Discover. Network. Inspire.
-				</h1>
-
-				<h3>
-					"Are you..."
-				</h3>
-
+				<h1>Discover. Network. Inspire.</h1>
+				<h3>"Are you..."</h3>
 			</div>
-			
 			<div class="main-button">
-
-				<a rel="leanModal" name="signup" href="#signup" class="main-btn">
-					Looking For Clients
-
-				</a>
-
-
-				<a rel="leanModal" name="signup" href="#signup" class="main-btn">
-					Looking For Beauty Artists
-				</a>
-
-
+				<a rel="leanModal" name="signup" href="#signup" class="main-btn">Looking For Clients</a>
+				<a rel="leanModal" name="signup" href="#signup" class="main-btn">Looking For Beauty Artists</a>
 			</div>
-
 		</div>
-
 	</div>
 
 	<!-- [Looking for clients] FIRST FEATURE BENEFIT -->
-
 	<div id="feature-a-container">
-
-		<h1 class="page-header" style="border:none; margin:20px 0 40px;">
-	                    Looking For Beauty Artists
-	                </h1>
-
+		<h1 class="page-header" style="border:none; margin:20px 0 40px;"> Looking For Beauty Artists</h1>
 		<div class="feature-a">
-
 			<div class="feature-a-copy">
-
-				<!-- *** EDIT ME *** -->
 				<h2>Manage Your Appointments and Payments</h2>
-
 				<p>Let your clients schedule an appointment with a calendar, which will sync with their calendar so they won't miss an appointment. Express payment will allow your customers to prepay for your service for a hassle free transaction.</p>
-
 			</div>	
-
 		</div>
-		
 		<div class="feature-a-image">
-
 			<img class="center-block" src="{% static "images/Icons/calendar.png" %}" />
-
 		</div>
-
 	</div>
-
 
 	<!-- [Looking for clients] SECOND FEATURE BENEFIT -->
 
 	<div id="feature-b-container">
-		
 		<div class="feature-b">
-			
 			<div class="feature-b-image">
-
 				<img class="center-block" src="{% static "images/Icons/profile_icon.png" %}" />
-
 			</div>
-
 			<div class="feature-b-copy">
-
 				<h2>Create a profile and network with other professionals in your area</h2>
-
 				<p>Allow customers to connect with you and your work. List a variety of services you provide. Upload pictures on your social media profiles and line it with your sephyr account.</p>
-
 				<p style="padding-top: 5px;">Connect with other professionals in your area. </p>
-
 			</div>
-
 		</div>
-		
 	</div>
 
 	<!-- [Looking for clients] THIRD FEATURE BENEFIT -->
 
 	<div id="feature-c-container">
-		
 		<div class="feature-c">
-			
 			<div class="feature-c-copy">
-
 				<h2>Easy to use platform</h2>
-
 				<p>Quick and easy to learn platform will allow you to integrate this software in your business</p>
-
 				<p style="padding-top: 5px;"> Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
-
 			</div>
-			
 			<div class="feature-c-image">
-
 				<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
-
 			</div>
-
 		</div>
-		
 	</div>
-
 
 	<!-- [Looking for beauty artists] FEATURE BENEFITS -->
 
