--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,8 +52,8 @@
 				<h3>"Are you..."</h3>
 			</div>
 			<div class="main-button">
-				<a rel="leanModal" name="signup" href="#signup" class="main-btn">Looking For Clients</a>
-				<a rel="leanModal" name="signup" href="#signup" class="main-btn">Looking For Beauty Artists</a>
+				<a rel="leanModal" href="#signup" class="main-btn">Looking For Clients</a>
+				<a rel="leanModal" href="#signup" class="main-btn">Looking For Beauty Artists</a>
 			</div>
 		</div>
 	</div>
@@ -111,6 +111,8 @@
                     Looking For Beauty Artists
                 </h1>
 	        </div>
+	    </div>
+	    <div>
 			<div class="col-md-3">
                 <div class="panel-heading" style="background:none; border:none;">
                     <img class="img-responsive center-block" src="{% static "images/Icons/housecall_icon.png" %}" style="width:180px; height:180px"/>
@@ -143,7 +145,8 @@
                     <p>Schedule Appointments at the tap of a button</p>
                 </div>
             </div>
-	    </div>
+		</div>
+	</div>
 	<!-- FOOTER CONTAINER -->
 
 	<div id="footer-container">
