minor changes in index/css

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,8 +91,7 @@
 		<div class="feature-c">
 			<div class="feature-c-copy">
 				<h2>Easy to use platform</h2>
-				<p>Quick and easy to learn platform will allow you to integrate this software in your business</p>
-				<p style="padding-top: 5px;"> Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
+				<p>Quick and easy to learn platform will allow you to integrate this software as part of your business. Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
 			</div>
 			<div class="feature-c-image">
 				<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
