main buttons direct to right area. addl: added more consistent styling, moved font declarations to fonts.css, custom styling for landing in stylesheet.css

--- a/app/templates/thankyou.html
+++ b/app/templates/thankyou.html
@@ -10,6 +10,8 @@
 
 	{% load static %}
 	<link href= "{% static "css/main.css" %}" media="all" rel="stylesheet" type="text/css">
+	<link charset="utf-8" href="{% static "css/fonts.css" %}" rel="stylesheet" type="text/css">
+	<link charset="utf-8" href="{% static "css/stylesheet.css" %}" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div style="height:100vh;" class="jumbotron">
