--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- META -->
  	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- add other meta contents after this line -->
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-
 	<link href="/favicon.ico" rel="icon" type="image/x-icon">
 
-	{% load static %}
+	<!-- BOOTSTRAP -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+	<!-- CSS -->
+	{% load static %}
+	<link charset="utf-8" href="{% static "css/fonts.css" %}" rel="stylesheet" type="text/css">
 	<link charset="utf-8" href="{% static "css/stylesheet.css" %}" rel="stylesheet" type="text/css">
 	<link href= "{% static "css/main.css" %}" media="all" rel="stylesheet" type="text/css">
-
+	<script src="https://use.fontawesome.com/9de69730d8.js"></script>
 
 	<!-- jQuery -->
-	<script type="text/javascript" src="jquery-1.8.3.js"></script>
-	<script type="text/javascript" src="{% static "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" %}"></script>
-
-
+	<!-- <script type="text/javascript" src="jquery-1.8.3.js"></script> -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 
 	<script type="text/javascript" src="{% static "js/jquery.leanModal.min.js" %}"></script>
@@ -45,22 +37,23 @@
 	<div id="cta-container">
 		<div class="cta">
 			<div class="logo">
-				<h1 style="font-size:72px;"> Sephyr | Your Business, Your Way </h1>
+				<h1 class="header"> Sephyr | Your Business, Your Way </h1>
 			</div>
 			<div class="copy">
 				<h1>Discover. Network. Inspire.</h1>
 				<h3>"Are you..."</h3>
 			</div>
 			<div class="main-button">
-				<a rel="leanModal" href="#signup" class="main-btn">Looking For Clients</a>
-				<a rel="leanModal" href="#signup" class="main-btn">Looking For Beauty Artists</a>
+				<a rel="leanModal" href="#clients" class="main-btn">Looking For Clients</a>
+				<a rel="leanModal" href="#users" class="main-btn">Looking For Beauty Artists</a>
 			</div>
 		</div>
 	</div>
+	
 
-	<!-- [Looking for clients] FIRST FEATURE BENEFIT -->
+	<!-- FIRST FEATURE BENEFIT -->
 	<div id="feature-a-container">
-		<h1 class="page-header" style="border:none; margin:20px 0 40px;"> Looking For Clients</h1>
+		<h1 class="page-header subtitles" id="clients" style="border:none;">Looking For Clients</h1>
 		<div class="feature-a">
 			<div class="feature-a-copy">
 				<h2>Manage Your Appointments and Payments</h2>
@@ -72,9 +65,8 @@
 		</div>
 	</div>
 
-	<!-- [Looking for clients] SECOND FEATURE BENEFIT -->
-
-	<div id="feature-b-container">
+	<!-- SECOND FEATURE BENEFIT -->
+	<div id="feature-b-container" class="feat-cont">
 		<div class="feature-b">
 			<div class="feature-b-image">
 				<img class="center-block" src="{% static "images/Icons/profile_icon.png" %}" />
@@ -82,19 +74,18 @@
 			<div class="feature-b-copy">
 				<h2>Create a profile and network with other professionals in your area</h2>
 				<p>Allow customers to connect with you and your work. List a variety of services you provide. Upload pictures on your social media profiles and line it with your sephyr account.</p>
-				<p style="padding-top: 5px;">Connect with other professionals in your area. </p>
+				<p class="subpara">Connect with other professionals in your area. </p>
 			</div>
 		</div>
 	</div>
 
-	<!-- [Looking for clients] THIRD FEATURE BENEFIT -->
-
-	<div id="feature-c-container">
+	<!-- THIRD FEATURE BENEFIT -->
+	<div id="feature-c-container" class="feat-cont">
 		<div class="feature-c">
 			<div class="feature-c-copy">
 				<h2>Easy to use platform</h2>
 				<p>Quick and easy to learn platform will allow you to integrate this software in your business</p>
-				<p style="padding-top: 5px;"> Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
+				<p class="subpara"> Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
 			</div>
 			<div class="feature-c-image">
 				<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
@@ -102,12 +93,11 @@
 		</div>
 	</div>
 
-	<!-- [Looking for beauty artists] FEATURE BENEFITS -->
-
+	<!-- USERS LOOKING FOR SERVICE -->
 	<div class="continer-fluid">
 		<div class="row">
 			<div class="col-lg-12">
-                <h1 class="page-header" style="border:none; margin:20px 0 40px;">
+                <h1 class="page-header subtitles" id="users">
                     Looking For Beauty Artists
                 </h1>
 	        </div>
@@ -153,9 +143,9 @@
 	<div id="footer-container">
 		<div class="footer">
 			<div id="signup">
-				<h4>We are so close to launching!</h4>
+				<h4>Let us keep you updated!</h4>
 				<p class="size16">
-					So glad you're interested in signing up. Please leave us your email, we'll let you know the moment we launch. You can also give us feedback to help us build the perfect product for you.
+					Please leave us your email, and we'll let you know about important dates on releases. We always appreciate ideas, feature-requests, knowledge, and any sort of feedback to help us build the perfect product for you.
 				</p>
 				<form action="{% url 'thankyou' %}" method="post">
 				  {% csrf_token %}
