--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -38,3 +38,16 @@
 	padding: 75px 0;
 }
 
+
+.subscribe {
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+
+.form-input {
+	padding-top: 10px;
+}
+
+.copyright {
+	margin-top: 50px;
+}
