--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,9 +25,8 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 
 	<script type="text/javascript" src="{% static "js/jquery.leanModal.min.js" %}"></script>
-	<script type="text/javascript">
+	<script type="text/javascript" src="{% static "js/landing.js" %}"></script>
 		
-	</script>   
 
 	<title>Sephyr: Beauty and Wellness Service</title> 
 </head>
@@ -140,7 +139,7 @@
 	</div>
 	<!-- FOOTER CONTAINER -->
 
-	<div id="footer-container">
+	<div id="footer-container" class="container">
 		<div class="footer">
 			<div id="signup">
 				<h4>Let us keep you updated!</h4>
@@ -148,20 +147,29 @@
 					Please leave us your email, and we'll let you know about important dates on releases. We always appreciate ideas, feature-requests, knowledge, and any sort of feedback to help us build the perfect product for you.
 				</p>
 				<form action="{% url 'thankyou' %}" method="post">
-				  {% csrf_token %}
-				  <label for="your_first">First name: </label>
-				  <input id="first_name" type="text" name="first_name"/>
-				  <label for="your_last">Last name: </label>
-				  <input id="last_name" type="text" name="last_name"/>
-				  <label for="your_email">Your email*: </label>
-				  <input id="email" type="text" name="email"/>
-				  <input type="submit" value="Subscribe"/>
-				  <p>* = Required fields</p>
+					{% csrf_token %}
+					<div class="row form-input">
+						<label for="your_first">First name: </label>
+					<input id="first_name" type="text" name="first_name"/>	
+					</div>
+					<div class="row form-input">
+					  <label for="your_last">Last name: </label>
+					  <input id="last_name" type="text" name="last_name"/>
+					</div>
+					<div class="row form-input">
+					  <label for="your_email">Your email*: </label>
+					  <input id="email" type="text" name="email"/>
+					<div class="row">
+						<div class="col-md-12">
+							<input type="submit" value="Subscribe" class="subscribe"/>
+					  		<p>* = Required fields</p>	
+						</div>
+					</div>
 				</form>
 			</div>
-			<div class="copyright">
-				<p>Copyright © 2016 Sephyr</p>
-			</div>
+		</div>
+		<div class="copyright row">
+			<p>Copyright © 2016 Sephyr</p>
 		</div>
 	</div>
 </body>
