--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -104,7 +104,7 @@
 
 		<div class="row">
 			<div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
+                <div class="panel-heading">
                     <img class="img-responsive center-block" src="{% static "images/Icons/housecall_icon.png" %}" style="width:180px; height:180px"/>
                 </div>
                 <div class="panel-body">
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
+                <div class="panel-heading">
                     <img class="img-responsive center-block" src="{% static "images/Icons/review_icon.png" %}" style="width:180px; height:180px"/>
                 </div>
                 <div class="panel-body">
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
+                <div class="panel-heading">
                     <img class="img-responsive center-block" src="{% static "images/Icons/find_icon.png" %}" />
                 </div>
                 <div class="panel-body">
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
+                <div class="panel-heading">
                     <img class="img-responsive center-block" src="{% static "images/Icons/appointment_icon.png" %}"/>
                 </div>
                 <div class="panel-body">
