--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -61,15 +61,17 @@
 	<!-- [Looking for clients] FIRST FEATURE BENEFIT -->
 	<div id="feature-a-container">
 		<h1 class="page-header" style="border:none; margin:20px 0 40px;"> Looking For Clients</h1>
-		<div class="feature-a">
-			<div class="feature-a-copy">
-				<h2>Manage Your Appointments and Payments</h2>
-				<p>Let your clients schedule an appointment with a calendar, which will sync with their calendar so they won't miss an appointment. Express payment will allow your customers to prepay for your service for a hassle free transaction.</p>
-			</div>	
-		</div>
-		<div class="feature-a-image">
-			<img class="center-block" src="{% static "images/Icons/calendar.png" %}" />
-		</div>
+	
+				<div class="feature-a">
+					<div class="feature-a-copy">
+						<h2>Manage Your Appointments and Payments</h2>
+						<p>Let your clients schedule an appointment with a calendar, which will sync with their calendar so they won't miss an appointment. Express payment will allow your customers to prepay for your service for a hassle free transaction.</p>
+					</div>	
+				</div>
+				<div class="feature-a-image">
+					<img class="center-block" src="{% static "images/Icons/calendar.png" %}" />
+				</div>
+
 	</div>
 
 	<!-- [Looking for clients] SECOND FEATURE BENEFIT -->
@@ -88,62 +90,69 @@
 
 	<!-- [Looking for clients] THIRD FEATURE BENEFIT -->
 	<div id="feature-c-container">
-		<div class="feature-c">
-			<div class="feature-c-copy">
-				<h2>Easy to use platform</h2>
-				<p>Quick and easy to learn platform will allow you to integrate this software as part of your business. Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
-			</div>
-			<div class="feature-c-image">
-				<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
+		<div class="container">
+			<div class="row">
+				<div class="feature-c">
+					<div class="feature-c-copy">
+						<h2>Easy to use platform</h2>
+						<p>Quick and easy to learn platform will allow you to integrate this software as part of your business. Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
+					</div>
+					<div class="feature-c-image">
+						<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- [Looking for beauty artists] FEATURE BENEFITS -->
-	<div class="continer-fluid">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-12">
-                <h1 class="page-header" style="border:none; margin:20px 0 40px;">
-                    Looking For Beauty Artists
-                </h1>
-	        </div>
-	    <div>
+				<div class="col-lg-12">
+	                <h1 class="page-header" style="border:none; margin:20px 0 40px;">
+	                    Looking For Beauty Artists
+	                </h1>
+		        </div>
 
-		<div class="row">
-			<div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
-                    <img class="img-responsive center-block" src="{% static "images/Icons/housecall_icon.png" %}" style="width:180px; height:180px"/>
-                </div>
-                <div class="panel-body">
-                    <p>Have the experts come to you</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
-                    <img class="img-responsive center-block" src="{% static "images/Icons/review_icon.png" %}" style="width:180px; height:180px"/>
-                </div>
-                <div class="panel-body">
-                    <p>Rate | Review | Follow your favorite artists and create a community</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
-                    <img class="img-responsive center-block" src="{% static "images/Icons/find_icon.png" %}" />
-                </div>
-                <div class="panel-body">
-                    <p>Find Experts Near You</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel-heading" style="background:none; border:none;">
-                    <img class="img-responsive center-block" src="{% static "images/Icons/appointment_icon.png" %}"/>
-                </div>
-                <div class="panel-body">
-                    <p>Schedule Appointments at the tap of a button</p>
-                </div>
-            </div>
+	        <div class="container">
+				<div class="row">
+					<div class="col-lg-3">
+		                <div class="panel-heading" style="background:none; border:none;">
+		                    <img class="img-responsive center-block" src="{% static "images/Icons/housecall_icon.png" %}" style="width:180px; height:180px"/>
+		                </div>
+		                <div class="panel-body">
+		                    <p>Have the experts come to you</p>
+		                </div>
+		            </div>
+		            <div class="col-lg-3">
+		                <div class="panel-heading" style="background:none; border:none;">
+		                    <img class="img-responsive center-block" src="{% static "images/Icons/review_icon.png" %}" style="width:180px; height:180px"/>
+		                </div>
+		                <div class="panel-body">
+		                    <p>Rate | Review | Follow your favorite artists and create a community</p>
+		                </div>
+		            </div>
+		            <div class="col-lg-3">
+		                <div class="panel-heading" style="background:none; border:none;">
+		                    <img class="img-responsive center-block" src="{% static "images/Icons/find_icon.png" %}" />
+		                </div>
+		                <div class="panel-body">
+		                    <p>Find Experts Near You</p>
+		                </div>
+		            </div>
+		            <div class="col-lg-3" style="padding-top:5%;">
+		                <div class="panel-heading" style="background:none; border:none;">
+		                    <img class="img-responsive center-block" src="{% static "images/Icons/appointment_icon.png" %}"/>
+		                </div>
+		                <div class="panel-body">
+		                    <p>Schedule Appointments at the tap of a button</p>
+		                </div>
+		            </div>
+				</div>
+			</div>
 		</div>
 	</div>
+
 	<!-- FOOTER CONTAINER -->
 
 	<div id="footer-container">
