added bottom border of user/client

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,7 +52,7 @@
 
 	<!-- FIRST FEATURE BENEFIT -->
 	<div id="feature-a-container">
-		<h1 class="page-header subtitles" id="clients" style="border:none;">Looking For Clients</h1>
+		<h1 class="page-header subtitles" id="clients" style="border:none;"><span>Looking For Clients</h1></span>
 		<div class="feature-a">
 			<div class="feature-a-copy">
 				<h2>Manage Your Appointments and Payments</h2>
@@ -101,7 +101,7 @@
 		<div class="row">
 			<div class="col-lg-12">
                 <h1 class="page-header subtitles" id="users">
-                    Looking For Beauty Artists
+                    <span>Looking For Beauty Artists</span>
                 </h1>
 	        </div>
 	    <div>
