--- a/static/css/main.css
+++ b/static/css/main.css
@@ -115,6 +115,10 @@ img {
 	max-width: 400px;
 }
 
+span {
+	border-bottom: solid;
+}
+
 #cta-container {
 	 background-image: url(../images/icons/bg_landing.jpg);
 	 background-repeat: no-repeat;
@@ -248,6 +252,9 @@ img {
 }
 
 /*FEATURE A*/
+#clients {
+	background-color: #f6f8f9;
+}
 
 #feature-a-container {
 	background-color: #f6f8f9;
