changed feature description A

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,7 +56,7 @@
 		<div class="feature-a">
 			<div class="feature-a-copy">
 				<h2>Manage Your Appointments and Payments</h2>
-				<p>Let your clients schedule an appointment with a calendar, which will sync with their calendar so they won't miss an appointment. Express payment will allow your customers to prepay for your service for a hassle free transaction.</p>
+				<p>Let your clients schedule an appointment on your calendar, which would be synced on their own so they won't miss an appointment. Express pre-payment option offered for a quick and easy transaction.</p>
 			</div>	
 		</div>
 		<div class="feature-a-image">
@@ -73,7 +73,7 @@
 			<div class="feature-b-copy">
 				<h2>Create a profile and network with other professionals in your area</h2>
 				<p>Allow customers to connect with you and your work. List a variety of services you provide. Upload pictures on your social media profiles and line it with your sephyr account.</p>
-				<p class="subpara">Connect with other professionals in your area. </p>
+				<p class="subpara">Connect with other professionals in your area and build a community. </p>
 			</div>
 		</div>
 	</div>
