added stock photos

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
 				<h1 class="header"> Sephyr | Your Business, Your Way </h1>
 			</div>
 			<div class="copy">
-				<h1>Discover. Network. Inspire.</h1>
+				<h1>Empowering Local Professionals</h1>
 				<h3>"Are you..."</h3>
 			</div>
 			<div class="main-button">
@@ -56,7 +56,8 @@
 		<div class="feature-a">
 			<div class="feature-a-copy">
 				<h2>Manage Your Appointments and Payments</h2>
-				<p>Let your clients schedule an appointment on your calendar, which would be synced on their own so they won't miss an appointment. Express pre-payment option offered for a quick and easy transaction.</p>
+				<p>Let your clients schedule an appointment on your calendar, which would be synced on their own so they won't miss an appointment.</p> 
+				<p>Allow express pre-payment to manage all of your transactions or choose to pay in cash.</p>
 			</div>	
 		</div>
 		<div class="feature-a-image">
@@ -136,7 +137,7 @@
                     <img class="img-responsive center-block" src="{% static "images/Icons/appointment_icon.png" %}"/>
                 </div>
                 <div class="panel-body">
-                    <p>Schedule Appointments at the tap of a button</p>
+                    <p>Schedule Appointments with a tap of a button</p>
                 </div>
             </div>
 		</div>
