--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -85,8 +85,8 @@
 			<div class="row">
 				<div class="feature-c">
 					<div class="feature-c-copy">
-						<h2>Easy to use platform</h2>
-						<p>Quick and easy to learn platform will allow you to integrate this software as part of your business. Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction.</p>
+						<h2>Robust platform</h2>
+						<p>Quick and easy to learn platform will allow you to integrate this software as part of your business. Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction. Choose between out-house or in-house services.</p>
 					</div>
 					<div class="feature-c-image">
 						<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
