switching background image to static decl

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
 
 <body>
 
-	<div id="cta-container">
+	<div id="cta-container" style="background: url('{% static 'images/Icons/background.jpg' %}')">
 		<div class="cta">
 			<div class="logo">
 				<h1 class="header"> Sephyr | Your Business, Your Way </h1>
