--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 #cta-container {
-	background-image: url(../images/icons/background.jpg);
+	/*background-image: url(../images/icons/background.jpg);*/
 	height:100vh;
 }
 
