--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,8 +16,8 @@
 	<!-- CSS -->
 	{% load static %}
 	<link charset="utf-8" href="{% static "css/fonts.css" %}" rel="stylesheet" type="text/css">
-	<link charset="utf-8" href="{% static "css/stylesheet.css" %}" rel="stylesheet" type="text/css">
 	<link href= "{% static "css/main.css" %}" media="all" rel="stylesheet" type="text/css">
+	<link charset="utf-8" href="{% static "css/stylesheet.css" %}" rel="stylesheet" type="text/css">
 	<script src="https://use.fontawesome.com/9de69730d8.js"></script>
 
 	<!-- jQuery -->
@@ -33,7 +33,15 @@
 
 <body>
 
-	<div id="cta-container" style="background: url('{% static 'images/Icons/background.jpg' %}')">
+	<div id="cta-container" 
+	style="	
+	background: url('{% static 'images/Icons/background.jpg' %}'); 
+	background-repeat: no-repeat; height:100vh;
+	background-size: cover;
+	background-attachment: fixed;
+	background-color: #3e3d4e;
+	color: white;
+	box-shadow: inset 0 0 0 1000px rgba(63,61,79,.6);">
 		<div class="cta">
 			<div class="logo">
 				<h1 class="header"> Sephyr | Your Business, Your Way </h1>
