HTML: hid images on small screens

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,7 +68,7 @@
 				<p>Allow express pre-payment to manage all of your transactions or choose to pay in cash.</p>
 			</div>	
 		</div>
-		<div class="feature-a-image">
+		<div class="feature-a-image hidden-xs">
 			<img class="center-block" src="{% static "images/Icons/calendar.png" %}" />
 		</div>
 	</div>
@@ -76,7 +76,7 @@
 	<!-- [Looking for clients] SECOND FEATURE BENEFIT -->
 	<div id="feature-b-container">
 		<div class="feature-b">
-			<div class="feature-b-image">
+			<div class="feature-b-image hidden-xs">
 				<img class="center-block" src="{% static "images/Icons/profile_icon.png" %}" />
 			</div>
 			<div class="feature-b-copy">
@@ -96,7 +96,7 @@
 						<h2>Robust platform</h2>
 						<p>Quick and easy to learn platform will allow you to integrate this software as part of your business. Takes the ease off of administrative work to focus solely in providing quality service and increase customer satisfaction. Choose between out-house or in-house services.</p>
 					</div>
-					<div class="feature-c-image">
+					<div class="feature-c-image hidden-xs">
 						<img class="center-block" src="{% static "images/Icons/platform_icon.svg" %}" />
 					</div>
 				</div>
