--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,7 +74,7 @@
 		<div class="feature-a">
 			<div class="feature-a-copy">
 				<h2>Manage Your Appointments and Payments</h2>
-				<p>Whether you're a freelancer or own a business, this scheduler will follow you wherever you go. We understand your time is precious, so this app will remind your clients of upcoming appoinments.  </p> 
+				<p>Whether you're a freelancer or own a business, this scheduler will follow you wherever you go. We understand your time is precious, so this app will remind your clients of upcoming appointments.  </p> 
 				<p>Allow express pre-payment to manage all of your transactions or choose to pay in cash.</p>
 			</div>	
 		</div>
