--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -61,8 +61,8 @@
 				<h3>"Are you..."</h3>
 			</div>
 			<div class="main-button">
-				<a rel="leanModal" href="#clients" class="main-btn">Looking For Clients</a>
-				<a rel="leanModal" href="#users" class="main-btn">Looking For Beauty Artists</a>
+				<a rel="leanModal" href="#clients" class="main-btn hidden-xs">Looking For Clients</a>
+				<a rel="leanModal" href="#users" class="main-btn hidden-xs">Looking For Beauty Artists</a>
 			</div>
 		</div>
 	</div>
